--- a/web/index.css
+++ b/web/index.css
@@ -1,7 +1,68 @@
+body, html {
+    margin: 0;
+    padding: 0;
+}
+body {
+    background-image: url("./bg.jpeg");
+    background-repeat: no-repeat;
+    background-position: top;
+    background-size: auto 600px;
+    color: #fff;
+    width: 100%;
+    height: 100%;
+}
 #log-wrap {
     width: 100%;
     padding: 20px;
     height: 300px;
     overflow-y: scroll;
     white-space: pre-wrap;
+}
+.title {
+    text-align: center;
+}
+.input {
+    margin-bottom: 20px;
+}
+.label {
+    width: 80px;
+    display: inline-block;
+    font-size: 16px;
+}
+#apikey, #apisecret {
+    width: 230px;
+    height: 30px;
+    border-radius: 4px;
+    border: 1px solid #dcdfe6;
+    color: #fff;
+    background: none;
+}
+.action {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 100px;
+}
+#start, #stop {
+    width: 100px;
+    height: 30px;
+    background-color: #2753ff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+}
+#stop {
+    background-color: #f83d3d;
+}
+#start {
+    background-color: #04c404;
+}
+.wrap {
+
+}
+.main-content {
+    text-align: left;
+    width: 320px;
+    height: 520px;
+    margin: 0 auto;
 }
